<resources>
    <string name="app_name">Recycler Application</string>
    <string name="Enter">Enter Tittle</string>
    <string name="tittle">Tittle</string>
    <string name="enter">Enter Description</string>
    <string name="hint">Description</string>
    <string name="add">Apply</string>
    <string name="enter_tittle">Enter Tittle</string>
    <string name="enter_description">Enter Description</string>
    <string name="select_priority">Enter Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="enter_task_title">Enter Task Tittle</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="rbHigh">rbHigh</string>
    <string name="rbLow">Low</string>
    <string name="rbMedium">Medium</string>
    <string name="all">All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="todo">ToDo</string>
    <string name="entertodo">Enter Todo</string>
    <string name="done">Done</string>
    <string name="ischecked">Is Checked</string>
</resources>