<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter"
        android:textAlignment="center"
        android:textSize="@dimen/sp11" />

    <EditText
        android:id="@+id/etTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp11"
        android:hint="@string/tittle"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp11"
        android:text="@string/enter"
        android:textAlignment="center"
        android:textSize="@dimen/sp11" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp11"
        android:hint="@string/hint"
        android:maxEms="3"
        android:textAlignment="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/sp_20"
        android:text="@string/select_priority"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        android:layout_gravity="center"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:id="@+id/rbLow"
            android:text="@string/low"
            android:textSize="@dimen/sp_20"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:id="@+id/rbMedium"
            android:text="@string/medium"
            android:textSize="@dimen/sp_20"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:id="@+id/rbHigh"
            android:text="@string/high"
            android:textSize="@dimen/sp_20"/>
    </RadioGroup>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sp11"
        android:text="@string/add" />


</LinearLayout>