<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/todo"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etCustomTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entertodo"
        android:minLines="5" />

    <CheckBox
        android:id="@+id/cbIsChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ischecked" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done" />
</LinearLayout>