<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SingleNotesFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etTodoTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tittle"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etTodoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/todo"
        android:textStyle="bold|italic"
        android:textSize="@dimen/sp_20" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Recyclerview"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/fabToDo"
    android:layout_gravity="end"/>
</LinearLayout>