<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoListFragment">

    <RadioGroup
        android:id="@+id/redioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       >

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <RadioButton
            android:id="@+id/rbHighPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high" />

        <RadioButton
            android:id="@+id/rbLowPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/rbMediumPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
       app:layout_constraintTop_toBottomOf="@id/redioGroup"
      app:layout_constraintBottom_toBottomOf="parent"

        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>